k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-service
  namespace: jupyter
  labels:
    app: jupyter
spec:
  type: NodePort
  selector:
    app: jupyter
  ports:
  - port: 8888
    targetPort: 8888
    nodePort: 30787  # Maps to port 7887 from NixOS config (30000 + 787)
    protocol: TCP
    name: http
